Prevent clipping long letters in device names

--- a/packages/vscode-extension/src/webview/components/DeviceSelect.css
+++ b/packages/vscode-extension/src/webview/components/DeviceSelect.css
@@ -3,7 +3,6 @@
   flex-shrink: 1;
   padding: 0px 10px;
   font-size: 13px;
-  line-height: 1;
   cursor: pointer;
   border: 0px solid transparent;
   border-radius: 18px;
@@ -36,6 +35,7 @@
 }
 
 .device-select-value-text {
+  height: fit-content;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -66,7 +66,7 @@
 
 .device-select-item {
   font-size: 13px;
-  line-height: 1;
+  line-height: 1.2;
   display: flex;
   align-items: center;
   height: 32px;
