--- a/packages/vscode-extension/src/webview/views/ManageDevicesView.css
+++ b/packages/vscode-extension/src/webview/views/ManageDevicesView.css
@@ -22,7 +22,7 @@
   min-width: 250px;
   align-items: center;
   gap: 10px;
-  line-height: 1;
+  line-height: 1.2;
   height: 48px;
   padding: 2px 6px 2px 2px;
   border-radius: 6px;
